# post-training-lab

./: .env.example  .gitignore  CLAUDE.md  LESSONS.md  Makefile  PROJECT.md  README.md  STEPS.md  TODOS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
configs/: base.yaml  baseline.yaml  dpo_qwen05b.yaml  rloo_qwen05b.yaml  rm_qwen05b.yaml  sft_qwen05b.yaml
docs/: index.md  results.md
docs/foundation/: baseline.md  eval-harness.md  index.md
docs/methods/: index.md  lora.md  sft.md
docs/training/: lora.md
experiments/: 002_sft_qwen05b.md  003_dpo_qwen05b.md  004_rm_qwen05b.md
notebooks/colab/: run_eval_baseline_colab.ipynb
notebooks/kaggle/: run_eval_baseline_kaggle.ipynb  run_sft_kaggle.ipynb
notebooks/modal/: run_sft_modal.ipynb
results/: metrics.json  sft_template_audit.jsonl
scripts/: audit_chat_template.py  eval_modal_check.py  explore_model.py
src/atlas/: __init__.py
src/atlas/cloud/: __init__.py  dpo_modal.py  eval_modal.py  rloo_modal.py  rm_modal.py  sft_modal.py
src/atlas/data/: __init__.py  preference_data.py  sft_data.py
src/atlas/eval/: __init__.py  harness.py
src/atlas/models/: __init__.py  adapters.py  base.py
src/atlas/train/: __init__.py  dpo.py  reward_model.py  rloo.py  sft.py
src/atlas/utils/: __init__.py  config.py
tests/: test_config.py  test_data.py  test_dpo_train.py  test_eval.py  test_models.py  test_rloo_train.py  test_rm_train.py  test_sft_data.py  test_sft_train.py
writeups/: sft_regression_diagnosis.html
